--- a/data/styles/_main.scss
+++ b/data/styles/_main.scss
@@ -11,3 +11,9 @@ canvas {
     transform: translate(-50%, -50%);
     background-color: honeydew;
 }
+
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
